force-app/main/default/objects/Vehicle_Relationship__c/Vehicle_Relationship__c.object-meta.xml
<CustomObject>
    <description>Relationship between vehicle and account</description>
    <label>Vehicle Relationship</label>
    <nameField>
        <displayFormat>V-{0000000000}</displayFormat>
        <label>Vehicle Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>