force-app/main/default/objects/Vehicle_Relationship__c/fields/AssignedDealer__c.field-meta.xml
<CustomField>
    <fullName>AssignedDealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Date the Vehicle was Sold</description>
    <label>Assigned Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vehicle Relationships (Assigned Dealer)</relationshipLabel>
    <relationshipName>Vehicle_Relationships2</relationshipName>
    <type>Lookup</type>
</CustomField>