force-app/main/default/objects/Vehicle_Relationship__c/fields/CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCode__c</fullName>
    <description>ISO 3 character country code Eg- USA,CAN</description>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>CAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>