force-app/main/default/objects/Vehicle_Relationship__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <description>Consumer Number. SCA-C generated 11 digit sequence number that increments by 1 and then append 50 to the end of it. Started with 10000000050</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vehicle Relationships (Customer)</relationshipLabel>
    <relationshipName>Vehicle_Relationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>