force-app/main/default/objects/Vehicle_Relationship__c/fields/DealershipReportedSaleDate__c.field-meta.xml
<CustomField>
    <fullName>DealershipReportedSaleDate__c</fullName>
    <description>Date the sale was reported by the dealership.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealership Reported Sale Date</label>
    <type>Date</type>
</CustomField>