force-app/main/default/objects/Vehicle_Relationship__c/fields/DisposalInd__c.field-meta.xml
<CustomField>
    <fullName>DisposalInd__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether or not a vehicle has been disposed (Y/N).</description>
    <label>Disposal Indicator</label>
    <type>Checkbox</type>
</CustomField>