force-app/main/default/objects/Vehicle_Relationship__c/fields/DisposalTypeCode__c.field-meta.xml
<CustomField>
    <fullName>DisposalTypeCode__c</fullName>
    <description>Code identifying the disposal types.</description>
    <label>Disposal Type Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>