force-app/main/default/objects/Vehicle_Relationship__c/fields/DriverInd__c.field-meta.xml
<CustomField>
    <fullName>DriverInd__c</fullName>
    <description>Indicates that for this vehicle cycle, this consumer is the driver of the vehicle.  Y = Yes, N = No</description>
    <label>Driver Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>H</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>