force-app/main/default/objects/Vehicle_Relationship__c/fields/EspInd__c.field-meta.xml
<CustomField>
    <fullName>EspInd__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag indicates that an Extended Service Plan was active for a vehicle at some point during this customer/vehicle ownership cycle.</description>
    <label>Esp Indicator</label>
    <type>Checkbox</type>
</CustomField>