force-app/main/default/objects/Vehicle_Relationship__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Vehicle Identification Number</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>