force-app/main/default/objects/Vehicle_Relationship__c/fields/FinancerInd__c.field-meta.xml
<CustomField>
    <fullName>FinancerInd__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that for this vehicle cycle, this consumer is the financer of the vehicle.  Y = Yes, N = No</description>
    <label>Financer Indicator</label>
    <type>Checkbox</type>
</CustomField>