force-app/main/default/objects/Vehicle_Relationship__c/fields/FromDate__c.field-meta.xml
<CustomField>
    <fullName>FromDate__c</fullName>
    <description>Date vehicle acquired</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Acquired Date</label>
    <type>Date</type>
</CustomField>