force-app/main/default/objects/Vehicle_Relationship__c/fields/GlobalSalesTypeCode__c.field-meta.xml
<CustomField>
    <fullName>GlobalSalesTypeCode__c</fullName>
    <description>Global codes that are used to identify different types of sales.  These codes consist of sales category codes concatenated with a single number to indicate different types of sales within that category.  Examples: A0 = Normal Retail F1 = Driving School E0 = Employee G1 = Sale to a Federal Government Agency or component D2 = Lease to a company/firm by a dealer O1 = Other</description>
    <label>Global Sales Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>