force-app/main/default/objects/Vehicle_Relationship__c/fields/NewUsedPurchase__c.field-meta.xml
<CustomField>
    <fullName>NewUsedPurchase__c</fullName>
    <description>Indicator shows whether vehicle was a new or used vehicle at the time of acquisition.</description>
    <label>New/Used Purchase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>U</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>