force-app/main/default/objects/Vehicle_Relationship__c/fields/OwnerInd__c.field-meta.xml
<CustomField>
    <fullName>OwnerInd__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that for this vehicle cycle, this consumer is the owner of the vehicle.  Y = Yes, N = No</description>
    <label>Owner Indicator</label>
    <type>Checkbox</type>
</CustomField>