force-app/main/default/objects/Vehicle_Relationship__c/fields/PrimaryConsumerInd__c.field-meta.xml
<CustomField>
    <fullName>PrimaryConsumerInd__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this is the primary consumer.  Y = Primary Consumer, N = Non-primary Consumer</description>
    <label>Primary Consumer Indicator</label>
    <type>Checkbox</type>
</CustomField>