force-app/main/default/objects/Vehicle_Relationship__c/fields/ProgramTypeCode__c.field-meta.xml
<CustomField>
    <fullName>ProgramTypeCode__c</fullName>
    <description>Will indicate if the vehicle was purchased as part of a program, such as Certified Pre-Owned.</description>
    <label>Program Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>C&amp;C</fullName>
            </value>
            <value>
                <fullName>CPB</fullName>
            </value>
            <value>
                <fullName>CPO</fullName>
            </value>
            <value>
                <fullName>CTP</fullName>
            </value>
            <value>
                <fullName>UNK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>