force-app/main/default/objects/Vehicle_Relationship__c/fields/SalesCategoryCode__c.field-meta.xml
<CustomField>
    <fullName>SalesCategoryCode__c</fullName>
    <description>Code denoting the classification of a deal with a type of customer.  Values include: A = Retail, F = Fleet, E = Employee, G = Government, D = Dealer Trans., and O = Other  Note:  Populated only for Owner.</description>
    <label>Sales Category Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>