force-app/main/default/objects/Vehicle_Relationship__c/fields/SellingDealer__c.field-meta.xml
<CustomField>
    <fullName>SellingDealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Intelligent key used to distinguish the dealer where the customer purchased a vehicle.  (For auto collections, SECONDARY SELLING DEALER should be used for actual dealer location)</description>
    <label>Selling Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vehicle Relationships (Selling Dealer)</relationshipLabel>
    <relationshipName>Vehicle_Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>