force-app/main/default/objects/Vehicle_Relationship__c/fields/ServicerInd__c.field-meta.xml
<CustomField>
    <fullName>ServicerInd__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that for this vehicle cycle, this consumer is the servicer of the vehicle.  Y = Yes, N = No</description>
    <label>Servicer Indicator</label>
    <type>Checkbox</type>
</CustomField>