force-app/main/default/objects/Vehicle_Relationship__c/fields/ToDate__c.field-meta.xml
<CustomField>
    <fullName>ToDate__c</fullName>
    <description>Date vehicle was disposed by the customer</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Sold/Disposal Date</label>
    <type>Date</type>
</CustomField>