force-app/main/default/objects/Vehicle_Relationship__c/fields/vehAsgnDealerReassignDate__c.field-meta.xml
<CustomField>
    <fullName>vehAsgnDealerReassignDate__c</fullName>
    <description>Date the vehicle assigned dealer was reassigned</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Assigned Dealer Reassigned Date</label>
    <type>Date</type>
</CustomField>