force-app/main/default/objects/Vehicle_Relationship__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Vehicle Relationships</relationshipLabel>
    <relationshipName>Vehicle_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>