force-app/main/default/objects/Vehicle_Relationship__c/fields/VehicleOwnershipCycleNum__c.field-meta.xml
<CustomField>
    <fullName>VehicleOwnershipCycleNum__c</fullName>
    <description>The ownership cycle describes a vehicle and its relationship period with a particular owner.  It is an integer value that increases incrementally as a vehicle changes ownership.</description>
    <label>Vehicle Ownership Cycle Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>